greatest time deleted once no longer visible

--- a/main.css
+++ b/main.css
@@ -53,7 +53,7 @@ body {
   background-color: #F0F5F5;
   height: 20px;
   white-space: nowrap;
-  overflow: hidden;
+  /* overflow: hidden; */
   box-shadow: 0px 1px 6px -3px rgba(0, 0, 0, 0.5);
 }
 
